// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
    >
      <div
        class="styles__vdhhd11 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_center_xxsmall__xf61n461"
        data-active="false"
        data-disabled="false"
        data-prominence="default"
        data-size="medium"
        data-trailing-icon="false"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly active 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
    >
      <div
        class="styles__vdhhd11 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_center_xxsmall__xf61n461"
        data-active="true"
        data-disabled="false"
        data-prominence="stronger"
        data-size="medium"
        data-trailing-icon="true"
      >
        test 
        <div
          class="styles__vdhhd10"
          data-active="true"
          data-disabled="false"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly active disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
    >
      <div
        class="styles__vdhhd11 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_center_xxsmall__xf61n461"
        data-active="true"
        data-disabled="true"
        data-prominence="stronger"
        data-size="medium"
        data-trailing-icon="true"
      >
        test 
        <div
          class="styles__vdhhd10"
          data-active="true"
          data-disabled="true"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
    >
      <div
        class="styles__vdhhd11 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_center_xxsmall__xf61n461"
        data-active="false"
        data-disabled="true"
        data-prominence="weak"
        data-size="medium"
        data-trailing-icon="true"
      >
        test 
        <div
          class="styles__vdhhd10"
          data-active="false"
          data-disabled="true"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
    >
      <div
        class="styles__vdhhd11 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_center_xxsmall__xf61n461"
        data-active="false"
        data-disabled="false"
        data-prominence="default"
        data-size="large"
        data-trailing-icon="true"
      >
        test 
        <div
          class="styles__vdhhd10"
          data-active="false"
          data-disabled="false"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly wiht icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
    >
      <div
        class="styles__vdhhd11 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_center_xxsmall__xf61n461"
        data-active="false"
        data-disabled="false"
        data-prominence="default"
        data-size="medium"
        data-trailing-icon="false"
      >
        <button
          class="styles__vdhhd10"
          data-active="false"
          data-disabled="false"
          data-has-onclick="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;
